<resources>
    <string name="app_name">RecipeBook</string>
    <string name="welcome">RECIPE BOOK</string>
    <string name="Please_Enter">Please Enter:</string>
    <string name="bookLogo">Recipe Logo</string>
    <string name="recipeTitle">Recipe Title:</string>
    <string name="recipePara">Recipe Instructions:</string>
    <string name="recipeIngredient">Recipe Ingredients:</string>
    <string name="addRecipe">+ Add Recipe</string>
    <string name="showAll">SHOW ALL</string>
    <string name="view_by">Which do you want to view by ?</string>
    <string name="line">————————————————————</string>
    <string name="go">GO</string>
    <string name="ingredients">~ Ingredients You Discovered ~</string>
    <string name="check">CHECK</string>
    <string name="recipe_list">Recipes List</string>
    <string name="recipe_subtitle">—— Click on Recipe to rate ——</string>
    <string name="recipe_rating">What do you think about this recipe ?</string>
    <string name="rate_btn">RATE</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="ingredients_icon">Ingredients List</string>

</resources>