<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtheme">

    <TextView
        android:id="@+id/view_by_textview"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:shadowColor="#00ccff"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/view_by"
        android:textColor="@color/blackColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/dropdown"
        android:layout_width="273dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_by_textview" />

    <TextView
        android:id="@+id/line_textview"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:shadowColor="#00ccff"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/line"
        android:textColor="@color/greyColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <Button
        android:id="@+id/selectBtn"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:gravity="center_horizontal"
        android:onClick="select_onclick"
        android:text="@string/go"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown" />

    <TextView
        android:id="@+id/ingredients_textview"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:shadowColor="#00ccff"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/ingredients"
        android:textColor="@color/blackColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_textview" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/ingredients_icon"
        android:src="@drawable/ingredient"
        app:layout_constraintBottom_toTopOf="@+id/checkBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginBottom="70dp"
        android:gravity="center_horizontal"
        android:onClick="check_onclick"
        android:text="@string/check"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>