<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtheme"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/bookLogo"
        android:src="@drawable/iconlogo"
        app:layout_constraintBottom_toTopOf="@+id/recipeTitle_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="273dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:shadowColor="#00ccff"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/welcome"
        android:textColor="@color/blackColor"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeTitle_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="413dp"
        android:gravity="center_horizontal"
        android:text="@string/recipeTitle"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/recipe_title_editText"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="216dp"
        android:alpha="0.6"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:labelFor="@+id/recipe_title_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipe_instruct_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/recipePara"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_title_editText" />

    <EditText
        android:id="@+id/recipe_instruct_editText"
        android:layout_width="303dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:labelFor="@+id/recipe_instruct_editText"
        android:alpha="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_instruct_textview" />

    <TextView
        android:id="@+id/recipe_ingredient_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/recipeIngredient"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_instruct_editText" />

    <EditText
        android:id="@+id/recipe_ingredient_editText"
        android:layout_width="303dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_border"
        android:labelFor="@+id/recipe_ingredient_editText"
        android:alpha="0.6"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_ingredient_textview" />

    <Button
        android:id="@+id/addRecipeBtn"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="184dp"
        android:gravity="center_horizontal"
        android:onClick="add_recipe_onclick"
        android:text="@string/addRecipe"
        android:textColor="@color/blackColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_ingredient_editText" />

    <Button
        android:id="@+id/showAllBtn"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:onClick="show_all_onclick"
        android:text="@string/showAll"
        android:textColor="@color/blackColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_ingredient_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>
