<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtheme">

    <TextView
        android:id="@+id/rate_recipe_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/recipeTitle"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rate_recipe_title_text"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:alpha="0.6"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:importantForAutofill="no"
        android:labelFor="@+id/rate_recipe_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_recipe_title_textview" />

    <TextView
        android:id="@+id/rate_recipe_instruction_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/recipePara"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_recipe_title_text" />

    <TextView
        android:id="@+id/rate_recipe_instruction_text"
        android:layout_width="303dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:alpha="0.6"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:importantForAutofill="no"
        android:labelFor="@+id/rate_recipe_instruction_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_recipe_instruction_textview" />

    <TextView
        android:id="@+id/rate_recipe_ingredients_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/recipeIngredient"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_recipe_instruction_text" />

    <TextView
        android:id="@+id/rate_recipe_ingredients_text"
        android:layout_width="303dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:alpha="0.6"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:labelFor="@+id/rate_recipe_ingredients_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_recipe_ingredients_textview" />


    <TextView
        android:id="@+id/rate_recipe_rating_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/recipe_rating"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rate_recipe_ingredients_text" />

    <RatingBar
        android:id="@+id/rate_recipe_rating_starbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_recipe_rating_textview" />

    <Button
        android:id="@+id/rateBtn"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:onClick="rate_onclick"
        android:text="@string/rate_btn"
        android:textColor="@color/blackColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_recipe_rating_starbar" />


</androidx.constraintlayout.widget.ConstraintLayout>